# otonome

./: .cursorignore  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
Training/: LOCAL_ROUTER_TRAINING.md  clean_chat_dataset.mjs  colab_bitnet_router_lora.md  csv_to_router_jsonl.mjs  dual_pass_qvac_engine.py  requirements.txt  router_training_data.csv  router_training_data.jsonl  train_router_local.py  train_router_lora.mjs
checkpoints/checkpoint_step_00000200+old/: metadata.txt
ms-bitnet-bf16/: data_summary_card.md
ms-bitnet-raw/: README.md
qvac-fabric-llm.cpp/: CMakeLists.txt  convert_hf_to_gguf.py
qvac-fabric-llm.cpp/common/: arg.cpp  common.h
qvac-fabric-llm.cpp/docs/: persona-plugin-format.md
qvac-fabric-llm.cpp/include/: llama.h
qvac-fabric-llm.cpp/src/: llama-model.cpp  llama-model.h
qvac-fabric-llm.cpp/tools/main/: CMakeLists.txt  main.cpp  persona_memcpy_smoke.cpp  persona_plugin.cpp  persona_plugin.h  qvac_memory_patcher.cpp  qvac_memory_patcher.hpp
scripts/: parity-prompt.txt  tauri-dev-prep.mjs
src/: App.tsx  airtableops.ts  exaops.ts  index.css  main.tsx  store.ts  themeStore.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-agent-orchestrator.toml  allow-hardware-preference.toml  allow-hermes.toml  allow-llama-cli.toml  allow-nsdar.toml  allow-webview-debug.toml
src-tauri/src/: anthropic.rs  dag_types.rs  egress_policy.rs  hardware_preference.rs  hermes_agent.rs  hermes_claude.rs  hermes_prompt.rs  hermes_tools.rs  hitl.rs  lib.rs  llama_cli.rs  lora_compose.rs  main.rs  nsdar.rs  orchestrator.rs  otonome_llm.rs  pass2_dummy_adapters.rs  path_resolve.rs  qvac_pass2.rs  router_llama_cpp.rs  run_store.rs  sop_normalize.rs  ternary_router.rs  workflow_state.rs
src/components/: ActionApprovalModal.tsx  AgentAvatar.tsx  AgentHitlBridge.tsx  AgentsScreen.tsx  (+42 more)
tools/: persona_qvp1_offline_check.py  qvp1_build.py
(+90 files in other folders)
