[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dev-dependencies]
tempfile = "3"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
uuid = { version = "1.11", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
gguf-rs-lib = { version = "0.2.5", default-features = true, features = ["std"] }
half = "2.4"
llama-cpp-2 = { version = "0.1.143", optional = true }
llama-cpp-sys-2 = { version = "0.1.143", optional = true }

[features]
# llama.cpp in-process router. On Windows this requires LLVM/Clang (libclang.dll) for bindgen.
llama_cpp = ["dep:llama-cpp-2", "dep:llama-cpp-sys-2"]
# Rebuild with CUDA-enabled llama.cpp (needs NVIDIA CUDA Toolkit + nvcc). Then set OTONOME_N_GPU_LAYERS e.g. 99.
llama_cpp_cuda = ["llama_cpp", "llama-cpp-2/cuda"]
# Vulkan offload (install LunarG Vulkan SDK; works on many Windows GPUs without CUDA).
llama_cpp_vulkan = ["llama_cpp", "llama-cpp-2/vulkan"]
